--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 **/Con dos commit.png
 **/desktop.ini
 **/Con 4 commit y sus hash flujo.png
+**/Merge.png
+**/Nueva rama con git branch y git switch.png
+**/Nueva rama con git branch y git switch2.png
+**/Nueva rama con git branch y git switch3.png
