--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 **/Nueva rama con git branch y git switch.png
 **/Nueva rama con git branch y git switch2.png
 **/Nueva rama con git branch y git switch3.png
+**/Merge + resolucion de conflicto.png
